# KiloNode

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  portable-build.yml  sanitizers.yml
cmake/: KiloNodeHardening.cmake  KiloNodeInstall.cmake  KiloNodeSanitizers.cmake  KiloNodeWarnings.cmake
docs/: getting-started-hobbyist.md
docs/bench/: README.md  ardop-external-modem.md  ax25-future-tx-lab-notes.md  ax25-live-diagnostics-checklist.md  ax25-live-scheduler-smoke.md  ax25-prepared-response-validation.md  ax25-response-bench-gate.md  capture-fixtures.md  diagnostic-replay.md  direwolf-receive-only.md  direwolf-usb-soundcard-kiss.md  fx25-capture-placeholders.md  fx25-future-bench-notes.md  importing-manual-captures.md  kilotnc-receive-only.md  manual-capture-index.md  manual-capture-replay.md  manual-capture-workspace.md  mercury-ofdm-external-modem.md  pty-kiss-receive-only.md  receive-only-safety.md  replay-bench-captures.md  serial-kiss-receive-only.md  tcp-kiss-receive-only.md  unix-socket-kiss-receive-only.md  vara-external-modem.md
docs/compat/: ax25-conformance-matrix.md  axip-capture-plan.md  black-box-observation-format.md  fx25-conformance-matrix.md  kiss-capture-plan.md  linbpq-black-box-plan.md  linbpq-compatibility-matrix.md  linbpq-node-command-coverage.md  linbpq-node-command-profiles.md  linbpq-node-command-requirements.md  linbpq-node-observation-pack.md  linbpq-node-risk-register.md  packet-capture-format.md  platform-matrix.md  rf-command-transcript-format.md  tnc-interface-matrix.md
docs/design/: 000-clean-room-policy.md  001-architecture.md  002-frame-model.md  003-monitor-model.md  004-transport-model.md  005-local-tnc-transports.md  006-daemon-model.md  007-config-format.md  008-control-plane.md  009-heard-list.md  010-node-shell.md  011-message-store.md  012-local-bbs-shell.md  013-linbpq-compatibility-lab.md  014-message-indexes.md  015-bbs-area-model.md  016-bbs-user-model.md  017-bbs-read-state.md  018-store-maintenance.md  019-store-locking.md  020-bbs-control-plane.md  021-access-policy.md  022-session-hardening.md  023-ci-and-build-profiles.md  024-portability-policy.md  025-hardening-profile.md  026-install-layout.md  027-service-management.md  028-packaging-policy.md  029-rf-receive-event-model.md  030-rf-session-groundwork.md  031-rf-transmit-frame-model.md  032-rf-transmit-queue.md  033-tx-dry-run-path.md  034-tx-dispatch-test-harness.md  035-real-kiss-tx-dispatch.md  036-rf-safety-gates.md  037-rf-node-command-ingress.md  038-rf-reply-policy.md  039-rf-abuse-controls.md  (+91 more)
docs/examples/: kilonode.conf
docs/man/: kilonode-compat.1  kilonode-monitor.1  kilonode-msg.1  kilonode-store.1  kilonode-user.1  kilonodectl.1  kilonoded.8
docs/milestones/: M1-compatibility-audit.md  M1-feature-inventory.md  M1-known-limitations.md  M1-next-milestones.md  M1-safety-audit.md  M1-test-inventory.md  M1-v0.1-alpha-readiness.md  M2-plan.md  M2.1-loopback-simulator.md  M2.2-i-frame-loopback.md  M2.3-segmentation-paclen.md  M2.4-windowed-loopback.md  M2.5-retransmission-buffer-diagnostics.md  M2.6-connect-dry-run.md  M2.7-hobbyist-preview.md  M2.8-external-modem-roadmap.md  M2.8-external-modem-scaffold.md  M2.9-hobbyist-v0.2-alpha-readiness.md  M2.9-known-limitations.md  M2.9-next-work.md  M2.9-release-checklist.md
docs/modems/: README.md  ardop.md  direwolf-kiss.md  external-modem-discovery-checklist.md  kilotnc-kiss.md  mercury-ofdm-capture-notes.md  mercury-ofdm-discovery-pack.md  mercury-ofdm-interface-questions.md  mercury-ofdm-test-plan.md  mercury-ofdm.md  vara-hf-fm.md
docs/product/: README.md  first-run-checklist.md  hobbyist-v0.2-alpha-preview.md  modem-support-status.md  what-is-still-blocked.md  what-works-today.md
docs/protocols/: ax25-connected-mode-plan.md  ax25-notes.md  ax25-reference-index.md  fx25-layering-plan.md  kiss-notes.md  (+2 more)
scripts/: ax25-connect-dry-run-fixtures.sh  ax25-live-scheduler-smoke-check.sh  ax25-loopback-fixtures.sh  ax25-no-transmit-check.sh  ax25-prepared-gate-report.sh  ax25-prepared-replay-fixtures.sh  ax25-response-bench-preflight.sh  ax25-safety-check.sh  ax25-timer-replay-fixtures.sh  bench-rx-ax25-status.sh  bench-rx-capture-report.sh  bench-rx-check-configs.sh  bench-rx-direwolf-notes.sh  bench-rx-fixture-status.sh  bench-rx-import-capture.sh  bench-rx-kiss-tcp-smoke.sh  bench-rx-monitor-tcp.sh  bench-rx-replay-diagnostics.sh  bench-rx-replay-fixtures.sh  bench-rx-workspace-import.sh  bench-rx-workspace-init.sh  bench-rx-workspace-list.sh  bench-rx-workspace-replay.sh  bench-rx-workspace-report.sh  build-release.sh  build-sanitize.sh  build.sh  check-format.sh  check-headers.sh  check-packaging.sh  check-portability.sh  clean.sh  compat-capture-axip-placeholder.sh  compat-capture-kiss-placeholder.sh  compat-capture-placeholder.sh  compat-check-node-plan.sh  compat-generate-node-plan.sh  compat-node-coverage-report.sh  compat-normalize-observations.sh  compat-observe-linbpq-placeholder.sh  (+20 more)
tests/: compat_process_helper.c  test_access_policy.c  test_ax25.c  test_ax25_action.c  test_ax25_action_mapper.c  test_ax25_connect_dry_run.c  test_ax25_connect_dry_run_script.c  test_ax25_connection.c  test_ax25_connection_diag.c  test_ax25_connection_event.c  test_ax25_connection_key.c  test_ax25_connection_table.c  test_ax25_control.c  test_ax25_control_plane.c  test_ax25_frame_builder.c  test_ax25_frame_plan.c  test_ax25_i_frame.c  test_ax25_live_diag.c  test_ax25_live_scheduler.c  test_ax25_loopback.c  test_ax25_loopback_endpoint.c  test_ax25_loopback_link.c  test_ax25_loopback_payload.c  test_ax25_loopback_report.c  test_ax25_loopback_retransmit.c  test_ax25_loopback_script.c  test_ax25_loopback_segment.c  test_ax25_loopback_window.c  test_ax25_paclen.c  test_ax25_params.c  test_ax25_payload_delivery.c  test_ax25_prepared_diag.c  test_ax25_prepared_expect.c  test_ax25_prepared_frame.c  test_ax25_prepared_policy.c  test_ax25_prepared_queue.c  test_ax25_prepared_replay_check.c  test_ax25_prepared_replay_report.c  test_ax25_prepared_tx_bridge.c  test_ax25_prepared_tx_diag.c  (+102 more)
(+389 files in other folders)
